Closed
Bug 1363201
Opened 8 years ago
Closed 8 years ago
WrVecU8 is misimplemented
Categories
(Core :: Graphics: WebRender, defect)
Core
Graphics: WebRender
Tracking
()
RESOLVED
FIXED
mozilla55
| Tracking | Status | |
|---|---|---|
| firefox55 | --- | fixed |
People
(Reporter: Gankra, Assigned: Gankra)
References
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.12; rv:53.0) Gecko/20100101 Firefox/53.0
Build ID: 20170413192749
Steps to reproduce:
length isn't initialized in the constructors
| Comment hidden (mozreview-request) |
Comment 2•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8865659 [details]
Bug 1363201 - fix the impl of WrVecU8,
https://reviewboard.mozilla.org/r/137280/#review140312
Attachment #8865659 -
Flags: review?(jmuizelaar) → review+
Comment 3•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8865659 [details]
Bug 1363201 - fix the impl of WrVecU8,
https://reviewboard.mozilla.org/r/137280/#review140336
::: commit-message-f18b8:1
(Diff revision 1)
> +Bug 1363201 - fix the impl of WrVecU8, r=jrmuizel
Please use a more descriptive commit message. It's not at all clear to me why you changed from nullptr to (uint8_t*)1, that should be explained somewhere.
Comment 4•8 years ago
|
||
It's, in fact, probably worth explaining (unint8_t*)1 in a comment.
| Comment hidden (mozreview-request) |
Updated•8 years ago
|
Assignee: nobody → a.beingessner
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 6•8 years ago
|
||
Try push at https://treeherder.mozilla.org/#/jobs?repo=try&revision=e81586e95c8f30aa6bcc0b6521cd731237dc636f includes this patch
Comment 7•8 years ago
|
||
Try push is showing failures. I did another try push with just this patch (without the WR update) to confirm that the failures are from the WR update. If so we can land this patch safely.
https://treeherder.mozilla.org/#/jobs?repo=try&revision=a173efe50567e0930236b573d6c57039033b131c
| Comment hidden (mozreview-request) |
Comment 9•8 years ago
|
||
Comment 10•8 years ago
|
||
That one is good. Landing...
Comment 11•8 years ago
|
||
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/projects/graphics/rev/c509185bf7e5
fix the impl of WrVecU8, r=jrmuizel
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Comment 12•8 years ago
|
||
| bugherder | ||
Updated•8 years ago
|
status-firefox55:
--- → fixed
Target Milestone: --- → mozilla55
You need to log in
before you can comment on or make changes to this bug.
Description
•