Bug 1363201 - fix the impl of WrVecU8, r=jrmuizel

Two bugs:

* We were failing to (re)initialize the length to 0, leading to segfaults on Rust processing "empty" lists.

* We were setting the pointer of empty Vec's to null, which is technically UB in Rust because Vec tells Rust its pointer is non-null (this is why Option<Vec<T>> has the same size as Vec<T>). align_of::<T> is what it uses to as a non-null junk pointer, which in this case is 1.

MozReview-Commit-ID: Gzy1NtKlSV7